--- a/back-end/gateway/src/main/resources/application.yml
+++ b/back-end/gateway/src/main/resources/application.yml
@@ -1,1 +1,25 @@
-spring.application.name=gateway
+server:
+  port: 9090
+spring:
+  application:
+    name: gateway
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${KEY-CLOAK-SERVER-URL}/realms/${KEY-CLOAK-REALM}
+  cloud:
+    gateway:
+      routes:
+        - id: profile
+          uri: http://localhost:8000
+          predicates:
+            - Path=/api/profile/**
+          filters:
+            - RemoveRequestHeader=Cookie
+        - id: auth
+          uri: http://localhost:8000
+          predicates:
+            - Path=/api/auth/**
+          filters:
+            - RemoveRequestHeader=Cookie
