--- a/back-end/gateway/src/main/resources/application.yml
+++ b/back-end/gateway/src/main/resources/application.yml
@@ -23,3 +23,8 @@ spring:
             - Path=/api/auth/**
           filters:
             - RemoveRequestHeader=Cookie
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.security.web: DEBUG
+    org.springframework.security.oauth2: DEBUG
