--- a/back-end/profile/src/main/resources/application.yml
+++ b/back-end/profile/src/main/resources/application.yml
@@ -4,12 +4,17 @@ spring:
   application:
     name: profile
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA-SERVER-URL}
     producer:
       key-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
       value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
     properties:
-      schema.registry.url: http://localhost:8081
+      schema.registry.url: ${KAFKA-REGISTRY.URL}
+  data:
+    redis:
+      host: ${REDIS-HOST-URL}
+      port: ${REDIS-PORT}
+      password: ${REDIS-PASSWORD}
 keycloak:
   clientId: ${KEY-CLOAK-CLIENT-ID}
   clientSecret: ${KEY-CLOAK-SECRET}
