add redis image to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,18 @@ services:
       - ./environment-files/key-cloak/.env
     networks:
       - local
+  redis:
+    container_name: redis
+    image: redis:7.4.0-alpine
+    restart: always
+    ports:
+      - 6379:6379
+    volumes:
+      - redis-data:/data
+      - ./docker/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
+    env_file:
+      - ./environment-files/redis/.env
+volumes:
+  redis-data:
 networks:
   local:
