--- a/back-end/profile/pom.xml
+++ b/back-end/profile/pom.xml
@@ -86,6 +86,14 @@
             <artifactId>kafka-avro-serializer</artifactId>
             <version>7.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
