--- a/back-end/media/src/main/resources/application.yml
+++ b/back-end/media/src/main/resources/application.yml
@@ -12,4 +12,8 @@ spring:
 #      schema.registry.url: ${KAFKA-REGISTRY.URL}
 #kafka:
 #  schema-folder-path: "/kafka/topic_schema/"
-  
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /api-docs
